--- a/shopServer/templates/changePic.html
+++ b/shopServer/templates/changePic.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block css%}
+{% extends "base.html" %} {% load staticfiles %}{% block css%}
 <style type="text/css">
 	tr td {
 		background-color: white;
@@ -26,7 +26,9 @@
 {% endblock %} {% block contentLeft %} 轮播图
 <small>Version 5.0</small> {% endblock %} {% block content %}
 <div class="center-middle">
-	<table class="table table-bordered userTable">
+	<br />
+	<button class="btn btn-default plus btn btn-primary demo3">轮播图添加</button>
+	<table class="table table-bordered userTable"style="margin: 10px;">
 		<tr>
 			<th colspan="15" style="background-color:#E0EEEE;">商品图片修改</th>
 		</tr>
@@ -56,189 +58,87 @@
 {% endblock %}
 
 {%block script %}
-	
-	<script type="text/javascript">
-		function getUrlParam(name){
-			var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
-			var r = window.location.search.substr(1).match(reg);
-			if (r!=null) return unescape(r[2]); return null;
-			}
-		
-		
-//		var url="http://localhost:8000/goodsSelectByid/";
-		var goodsid = getUrlParam("goodsid")
-		myPost("goodsSelectByid/",{goodsid:goodsid},function(data){
-				for(var i=0;i<data.data.length;i++){
-					console.log(data.data[i])
-					console.log(data.data[i].goodsid)
-					if(data.data[i].goodsid == goodsid){
-						
-						var number = 1;
-						var picName = data.data[i].images;
-						console.log(picName);
-						// var order = 1;
-						var picNames = new Array()
-						if (picName)
+<script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
+	function getUrlParam(name){
+		var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
+		var r = window.location.search.substr(1).match(reg);
+		if (r!=null) return unescape(r[2]); return null;
+		}
+	var goodsid = getUrlParam("goodsid")
+	console.log(goodsid)
+	myPost("goodsSelectByid",{"goodsid":goodsid},function(data){
+			for(var i=0;i<data.data.length;i++){
+				console.log(data.data[i])
+				console.log(data.data[i].goodsid)
+				if(data.data[i].goodsid == goodsid){
+					
+					var number = 1;
+					var picName = data.data[i].images;
+					console.log(picName);
+					// var order = 1;
+					var picNames = new Array()
+					if (picName)
+					{
+						console.log(picName.indexOf("---"));
+						if (picName.indexOf("---") >= 0)
 						{
-							console.log(picName.indexOf("---"));
-							if (picName.indexOf("---") >= 0)
-							{
-								console.log("hahhah");
-								picNames =picName.split("---");
-								console.log(picNames);
-							}
+							console.log("hahhah");
+							picNames =picName.split("---");
+							console.log(picNames);
 						}
-						if (picNames.length != 0)
-						{
-							for(var i=0;i<picNames.length-1;i++){
-								newPic = picNames[i]
-								number = i +1;
-								var ele = '<tr class="mytr"><td style="text-align: center;vertical-align: middle;" width="10%">'+number+'</td><td class="mytd" style="text-align: center;vertical-align: middle;" width="50%"><img src="http://localhost:8000/static/myfile/'+ newPic +'" /></td><td style="text-align: center;vertical-align: middle;" width="20%">'+number+'</td><td style="text-align: center;vertical-align: middle;" width="20%"><span class="glyphicon glyphicon-trash delBtn" style="margin-left: 10px;"></span></td></tr>'
-								$(".userTable").append(ele);
-							}
-						}
-						else{
-							alert("此商品没有图片");
-							history.go(-1);
-						}
-						
-						
-						$(".delBtn").click(function(){
-								var that = $(this).parents("tr")
-								var a = that.children(".mytd")
-								var b = $(a).children()
-								
-//								获取图片链接c
-								c = $(b)[0].src
-								console.log(c)
-								var urls = new Array()
-								urls =c.split("/")
-								//获取图片名
-								getUrl = urls.pop()
-								console.log(getUrl)
-								finalUrl = picName.replace(getUrl+'---','')
-								console.log(finalUrl)
-								console.log(goodsid)
-								
-								myPost("goodsManageJsonUpdata/",{"images":finalUrl,"goodsid":goodsid},function(data){
-									console.log("ajax发送请求成功")
-									location.reload() 
-									
-								})
-								
-//								$.ajax({
-//									url: "http://localhost:8000/goodsManageJsonUpdata/", 
-//									type: 'POST', 
-//									success:"success",
-//									data:{"images":finalUrl,"goodsid":goodsid},
-//									success: function (data) {
-//										
-//										console.log("ajax发送请求成功")
-//										location.reload() 
-//										
-//									}, 
-//									error: function (msg) {
-//										console.log("error 加载数据失败")
-//								
-//									}
-								});
-								
-						})
-
 					}
-				
+					if (picNames.length != 0)
+					{
+						for(var i=0;i<picNames.length-1;i++){
+							newPic = picNames[i]
+							number = i +1;
+							var ele = '<tr class="mytr"><td style="text-align: center;vertical-align: middle;" width="10%">'+number+'</td><td class="mytd" style="text-align: center;vertical-align: middle;" width="50%"><img src="http://localhost:8000/static/myfile/'+ newPic +'" /></td><td style="text-align: center;vertical-align: middle;" width="20%">'+number+'</td><td style="text-align: center;vertical-align: middle;" width="20%"><span class="glyphicon glyphicon-trash delBtn" style="margin-left: 10px;"></span></td></tr>'
+							$(".userTable").append(ele);
+						}
+					}
+					else{
+						layer.msg('该商品没有图片')
+						console.log('............000...........')
+						// alert("此商品没有图片");
+						
+						window.setTimeout(function(){
+							history.go(-1);
+						
+						},2000)
+						
+					}
+					
+					
+					$(".delBtn").click(function(){
+							var that = $(this).parents("tr")
+							var a = that.children(".mytd")
+							var b = $(a).children()
+							
+//								获取图片链接c
+							c = $(b)[0].src
+							console.log(c)
+							var urls = new Array()
+							urls =c.split("/")
+							//获取图片名
+							getUrl = urls.pop()
+							console.log(getUrl)
+							finalUrl = picName.replace(getUrl+'---','')
+							console.log(finalUrl)
+							console.log(goodsid)
+							
+							myPost("goodsManageJsonUpdata",{"images":finalUrl,"goodsid":goodsid},function(data){
+								console.log("ajax发送请求成功")
+								location.reload() 
+								
+							})
+							});
+							
+					}
+				$(".demo3").click(function() {
+					window.location.href = "/changeLunbo/?goodsid=" + goodsid;
+				});
+			}
 		})
-
-
-
-//		$.ajax({
-//			url: url, 
-//			type: 'POST', 
-//			success:"success",
-//			data:{goodsid:goodsid},
-//			success: function (data) {
-//
-//
-//				
-//				for(var i=0;i<data.data.length;i++){
-//					console.log(data.data[i])
-//					console.log(data.data[i].goodsid)
-//					if(data.data[i].goodsid == goodsid){
-//						
-//						var number = 1;
-//						var picName = data.data[i].images;
-//						console.log(picName);
-//						// var order = 1;
-//						var picNames = new Array()
-//						if (picName)
-//						{
-//							console.log(picName.indexOf("---"));
-//							if (picName.indexOf("---") >= 0)
-//							{
-//								console.log("hahhah");
-//								picNames =picName.split("---");
-//								console.log(picNames);
-//							}
-//						}
-//						if (picNames.length != 0)
-//						{
-//							for(var i=0;i<picNames.length-1;i++){
-//								newPic = picNames[i]
-//								number = i +1;
-//								var ele = '<tr class="mytr"><td style="text-align: center;vertical-align: middle;" width="10%">'+number+'</td><td class="mytd" style="text-align: center;vertical-align: middle;" width="50%"><img src="http://localhost:8000/static/myfile/'+ newPic +'" /></td><td style="text-align: center;vertical-align: middle;" width="20%">'+number+'</td><td style="text-align: center;vertical-align: middle;" width="20%"><span class="glyphicon glyphicon-trash delBtn" style="margin-left: 10px;"></span></td></tr>'
-//								$(".userTable").append(ele);
-//							}
-//						}
-//						else{
-//							alert("此商品没有图片");
-//							history.go(-1);
-//						}
-//						
-//						
-//						$(".delBtn").click(function(){
-//								var that = $(this).parents("tr")
-//								var a = that.children(".mytd")
-//								var b = $(a).children()
-//								
-////								获取图片链接c
-//								c = $(b)[0].src
-//								console.log(c)
-//								var urls = new Array()
-//								urls =c.split("/")
-//								//获取图片名
-//								getUrl = urls.pop()
-//								console.log(getUrl)
-//								finalUrl = picName.replace(getUrl+'---','')
-//								console.log(finalUrl)
-//								console.log(goodsid)
-//								
-//								
-//								$.ajax({
-//									url: "http://localhost:8000/goodsManageJsonUpdata/", 
-//									type: 'POST', 
-//									success:"success",
-//									data:{"images":finalUrl,"goodsid":goodsid},
-//									success: function (data) {
-//										
-//										console.log("ajax发送请求成功")
-//										location.reload() 
-//										
-//									}, 
-//									error: function (msg) {
-//										console.log("error 加载数据失败")
-//								
-//									}
-//								});
-//								
-//						})
-//
-//					}
-//				}
-//			}, 
-//			error: function (msg) {
-//				console.log("error 加载数据失败")
-//		
-//			}
-//		});    
-	</script>
+</script>
 {% endblock%}
