--- a/shopServer/templates/drawManage.html
+++ b/shopServer/templates/drawManage.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load staticfiles %}
 
 
 {% block contentLeft %} 抽奖管理
@@ -50,4 +50,32 @@
 <br>
 <input type="submit" value="提交">
 </form>
+<br>
+
+
+#测试用查询快递单号按钮
+<input type="text" name="company" id="company" placeholder="请输入快递公司编号">
+<input type="text" name="NO" id="NO" placeholder="请输入快递单号">
+<button class="queryExpress">提交</button>
+
 {% endblock %}
+
+
+<script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
+<script src="{% static 'js/jquery.form.min.js' %}"></script>
+{% block script %}
+<script type="text/javascript">
+
+$(".queryExpress").click(function(e){
+	
+	var company = $("#company").val();
+	var NO = $("#NO").val();
+	console.log(company)
+	myPost("express" , {"company":company , "NO":NO} , function(data){
+			console.log("999999999999999")
+		})
+})
+
+</script>
+{% endblock %}
+
