--- a/shopServer/templates/luckyManage.html
+++ b/shopServer/templates/luckyManage.html
@@ -1,5 +1,9 @@
-{% extends "base.html" %} {% load staticfiles %} {% block css %}
+{% extends "base.html" %} 
+{% load staticfiles %} 
+
+{% block css %}
 <style type="text/css">
+
 	.biaojuzhong th {
 		text-align: center;
 	}
@@ -7,8 +11,8 @@
 	.biaojuzhong td {
 		text-align: center;
 	}
-	
-	.biaojuzhong td button {
+
+	.biaojuzhong td button{
 		padding: 2px 10px;
 		background-color: white;
 	}
@@ -32,7 +36,8 @@
 		border-collapse: collapse;
 	}
 </style>
-{% endblock %} {% block content %}
+{% endblock %}
+{% block content %}
 <div class="row" style="height: 60px;">
 	<div class="col-md-12" style="text-align: center;">
 		<form class="form-inline" action="#">
@@ -55,8 +60,8 @@
 			</button>
 			<button id="timeBtn" type="button" class="btn btn-warning">
 				<span class="glyphicon glyphicon-download" aria-hidden="true">当前时间降序</span>
-			</button>
-
+			</button>			
+			
 			<!-- 添加福袋 模态框 -->
 			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
 				<div class="modal-dialog" role="document">
@@ -73,7 +78,7 @@
 								</div>
 								<div class="form-group">
 									<label for="message-text" class="control-label">数量:</label>
-									<input type="number" class="form-control" id="addLucky-counts" value="1" name="number" min="1">
+									<input type="number" class="form-control" id="addLucky-counts" value="1" name="number" min="1" >
 								</div>
 							</form>
 						</div>
@@ -85,11 +90,13 @@
 				</div>
 			</div>
 
+
 		</div>
 		<div class="col-md-6" style="text-align: right;">
 			<p>共有数据:<strong id="luckyNumber">0</strong>条</p>
 		</div>
 	</div>
+
 
 	<div class="" id="bigdiv">
 		<table class="table table-bordered" style=" margin-bottom: 0px;">
@@ -101,8 +108,8 @@
 					</th>
 					<th>序号</th>
 					<th>商品名称</th>
-					<th>单价</th>
-					<th>数量</th>
+                    <th>单价</th>
+                    <th>数量</th>
 					<th>上架时间</th>
 					<th>编辑</th>
 				</tr>
@@ -129,30 +136,8 @@
                 </tr>-->
 			</tbody>
 		</table>
+		
 
-		<!-- 修改福袋 模态框 -->
-		<div class="modal fade" id="exampleModal-updata" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title">添加福袋</h4>
-					</div>
-					<div class="modal-body">
-						<form>
-							<div class="form-group">
-								<label for="message-text" class="control-label">数量:</label>
-								<input type="number" class="form-control" id="updataLucky-counts" value="1" name="number" min="1">
-							</div>
-						</form>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-						<button type="button" class="btn btn-info" id="form-updataLucky">修改</button>
-					</div>
-				</div>
-			</div>
-		</div>
 
 		<!-- 确定修改福袋 模态框 -->
 		<div class="modal fade" id="exampleModal-confirm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
@@ -174,6 +159,7 @@
 			</div>
 		</div>
 
+
 		<div class="row" id="div3" style=" padding: 1% 0;">
 			<div class="col-md-12" style="text-align: left;">
 				<div class="text-center">
@@ -182,258 +168,303 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<datalist id="itemlist">
-		<option>item1</option>
-		<option>汉堡</option>
-		
 	</datalist>
+
+{% endblock %}
+
+{% block contentRight %}
+<ol class="breadcrumb">
+    <li>
+        <a href="#"><i class="fa fa-dashboard"></i> Home</a>
+    </li>
+    <li class="active">福袋列表</li>
+</ol>
+{% endblock %}
+
+{% block contentLeft %}
+福袋列表
+<small>Version 5.0</small> 
+{% endblock %}
+
+{% block script %}
+<script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
+
+
+var luckyListPages = 3
+var luckyCount = 1
+var thispage = 1
+var commName = ""
+var updata_luckyid = ""
+var timeBtnUp = 0
+
+
+function oneLucky(data, i) {
+	var luckyid = data["luckyid"];
+	var goodsid = data["goodsid"];
+	var goodsname = data["goodsname"];
+	var number = data["counts"];
+	var numbs = data["counts"];
+	var price = "￥" + data["price"]
+	var uptime = data["uptime"];
+	var listNumber = (thispage - 1) * 10 + i+1
+	if (data["price"] == null) {
+		price = "未知"
+	}
+    var ele = '<tr class="biaojuzhong" zz='+ numbs +' luckyid="' + luckyid + '"><td><input type="checkbox" class="checkbox-one"></td><th scope="row">' + listNumber + '</th><td>' + goodsname + '</td><td>' + price + '</td><td><div class="item-amount"><a href="#" class="J_Minus no-minus glyphicon glyphicon-minus decrease" name="-"></a><input sb=' +　number +' type="text" value="' + number + '" id="numbers" class="text text-amount J_ItemAmount counts" data-max="281" data-now="1" autocomplete="off"><a href="#" name="+" class="J_Plus plus glyphicon glyphicon-plus increase"></a></div></td><td>' + uptime + '</td><td><button sb=' + number + ' class="btn btn-default updata" type="button">保存</button><button class="btn btn-default delete" type="button"><span class="glyphicon glyphicon-trash"  aria-hidden="true"></span></button></td></tr>'
+    $(".myListTable").append(ele)
 	
-	{% endblock %} {% block contentRight %}
-	<ol class="breadcrumb">
-		<li>
-			<a href="#"><i class="fa fa-dashboard"></i> Home</a>
-		</li>
-		<li class="active">福袋列表</li>
-	</ol>
-	{% endblock %} {% block contentLeft %} 福袋列表
-	<small>Version 5.0</small> {% endblock %} {% block script %}
-	<script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
-	<script type="text/javascript">
-		console.log("llll");
+}
 
-		var luckyListPages = 3
-		var luckyCount = 1
-		var thispage = 1
-		var commName = ""
-		var updata_luckyid = ""
-		var timeBtnUp = 0
+//解析数据到页面
+function luckyListToPage(data, i) {
+	
+	for (var i = 0; i < data.length; i++) {
+		oneLucky(data[i], i)
+	}
+	$(".updata").click(function(){
 
-		function oneLucky(data, i) {
-			var luckyid = data["luckyid"];
-			var goodsid = data["goodsid"];
-			var goodsname = data["goodsname"];
-			var counts = data["counts"];
-			var price = "￥" + data["price"]
-			var uptime = data["uptime"];
-			var listNumber = (thispage - 1) * 10 + i + 1
-			if(data["price"] == null) {
-				price = "未知"
+		$(this).parents("tr").children("td").each(function (i , item) {
+			if (i == 3) {
+				var yuanlaide = $(item).children("div").children("input").attr("sb");
+				var xianzaide = $(item).children("div").children("input").val();
+				luckyid = $(this).parents("tr").attr("luckyid");
+				if(yuanlaide!=xianzaide){
+					var luckyid = $(this).parents("tr").attr("luckyid");
+					$.post("http://localhost:8000/luckyManageJsonUpdata/", 
+						{"luckyid":luckyid,"num":xianzaide},
+						function(data){
+							if (data.status == "ok") {
+								$(this).parents("tr").children(".counts").val(xianzaide)
+								layer.msg("更新成功")
+								location.reload()
+							} else {
+								layer.msg("删除失败")
+							}
+						}
+					);
+				}
+				else{
+					layer.msg("无需保存")
+				}
 			}
-			var ele = '<tr class="biaojuzhong" luckyid="' + luckyid + '"><td><input type="checkbox" class="checkbox-one"></td><th scope="row">' + listNumber + '</th><td>' + goodsname + '</td><td>' + price + '</td><td>' + counts + '</td><td>' + uptime + '</td><td><button class="btn btn-default updata" type="button"><span class="glyphicon glyphicon-file"  aria-hidden="true" data-toggle="modal" data-target="#exampleModal-updata" ></span></button><button class="btn btn-default delete" type="button"><span class="glyphicon glyphicon-trash"  aria-hidden="true"></span></button></td></tr>'
-			$(".myListTable").append(ele)
-
-		}
-
-		//解析数据到页面
-		function luckyListToPage(data, i) {
-			for(var i = 0; i < data.length; i++) {
-				oneLucky(data[i], i)
-			}
-			$(".updata").click(function() {
-				updata_luckyid = $(this).parents("tr").attr("luckyid");
-				var updata_count = $($(this).parents("tr").children("td")[3]).text()
-				$("#updataLucky-counts").val(updata_count)
+				
 			})
-
-			$(".delete").click(function() {
-				var that = $(this).parents("tr")
-				var luckyArr = [that.attr("luckyid")]
-				$.ajax({
-					url: HomeUrl + "luckyManageJsonDelete/",
-					type: 'POST',
-					data: {
-						luckyids: luckyArr
-					},
-					traditional: true,
-					success: function(data) {
-						if(data["status"] == "ok") {
-							var deleteCount = data['deleteCount']
-							loaddata()
-							layer.msg("删除" + deleteCount + "条记录成功");
-						} else {
-							layer.msg("删除失败")
-						}
-					}
-				});
-			});
-		}
-
-		$("#form-updataLucky").click(function() {
-			var updata_counts = $("#updataLucky-counts").val()
-			//console.log(updata_luckyid)
-			$.ajax({
-				url: HomeUrl + "luckyManageJsonUpdata/",
-				type: 'POST',
-				data: {
-					counts: updata_counts,
-					luckyid: updata_luckyid
-				},
-				success: function(data) {
-					if(data["status"] == "ok") {
-						$("#exampleModal-updata").modal('hide')
-						loaddata()
-						layer.msg("修改记录成功");
-					} else {
-						layer.msg("修改失败")
-					}
-				}
-			});
 		});
-
-		$("#luckySelectBtn").click(function() {
-			thispage = 1
-			commName = $("#luckySelectName").val()
-			loaddata()
-		});
-
-		$('#deleteBtn').click(function() {
-			//console.log("delete")
-			var luckyArr = []
-			var checkboxs = $('.checkbox-one')
-			for(var i = 0; i < checkboxs.length; i++) {
-				if($(checkboxs[i]).is(':checked')) {
-					var luckyidOne = $(checkboxs[i]).parents("tr").attr("luckyid")
-					luckyArr.push(luckyidOne)
-				}
+		
+	$(".delete").click(function(){
+		var that = $(this).parents("tr")
+		var luckyArr = [that.attr("luckyid")]
+		$.ajax({
+			url: HomeUrl + "luckyManageJsonDelete/",
+			type: 'POST',
+			data:{luckyids:luckyArr},
+			traditional:true,
+			success: function (data) {
+				if (data["status"] == "ok") {
+					var deleteCount = data['deleteCount']
+					loaddata()
+					layer.msg("删除" + deleteCount + "条记录成功");
+			   	} else {
+					layer.msg("删除失败")
+			   	}
 			}
-			$.ajax({
-				url: HomeUrl + "luckyManageJsonDelete/",
-				type: 'POST',
-				data: {
-					luckyids: luckyArr
-				},
-				traditional: true,
-				success: function(data) {
-					if(data["status"] == "ok") {
-						var deleteCount = data['deleteCount']
-						loaddata()
-						layer.msg("删除" + deleteCount + "条记录成功");
-					} else {
-						layer.msg("删除失败")
-					}
-				}
-			});
 		});
+	});
+}
 
-		$('#checkbox-all').click(function() {
-			if($('#checkbox-all').is(':checked')) {
-				$(".checkbox-one").prop("checked", true);
+
+
+
+
+$("#luckySelectBtn").click(function(){
+	thispage = 1
+	commName = $("#luckySelectName").val()
+	loaddata()  
+});
+
+
+$('#deleteBtn').click(function () {
+	var luckyArr = []
+	var checkboxs = $('.checkbox-one')
+	for (var i = 0; i < checkboxs.length; i++) {
+		if($(checkboxs[i]).is(':checked')) {
+			var luckyidOne = $(checkboxs[i]).parents("tr").attr("luckyid")
+			luckyArr.push(luckyidOne)
+		}
+	}
+	$.ajax({
+		url: HomeUrl + "luckyManageJsonDelete/",
+		type: 'POST',
+		data:{luckyids:luckyArr},
+		traditional:true,
+		success: function (data) {
+			if (data["status"] == "ok") {
+				var deleteCount = data['deleteCount']
+				loaddata()
+				layer.msg("删除" + deleteCount + "条记录成功");
+		   } else {
+				layer.msg("请选择一个进行删除")
+		   }
+		}
+	});
+});
+
+
+$('#checkbox-all').click(function () {
+	if ($('#checkbox-all').is(':checked')) {
+		$(".checkbox-one").prop("checked",true);
+	} else {
+		$(".checkbox-one").prop("checked",false);
+	}
+});
+
+
+function loaddata() {
+	$.ajax({
+		url: HomeUrl + "luckyManageJsonQuery/?page=" + thispage + "&commName=" + commName + "&timeUp=" + timeBtnUp,
+		success: function (data) {
+			luckyCount = data.luckycount
+			luckyListPages = Math.ceil(parseInt(luckyCount) / 10 )
+			$(".myListTable").children("tr").remove()
+			//解析数据
+			mainData = data.data;
+			luckyListToPage(mainData)
+			//记录个数'
+			$("#luckyNumber").text(luckyCount);
+			$("#visible-pages-example").children(".sumdiv").remove()
+			var spanele = '<span class="sumdiv">共' + luckyListPages + '页,当前第' + thispage + '页,共' + luckyCount + '条数据</span>'
+			$("#visible-pages-example").append($(spanele))
+			createPageNav('#visible-pages-example' , luckyListPages , function(event , page){
+                thispage  = page;
+				loaddata();
+            });
+		},
+		error: function (msg) {
+			layer.msg("获取数据失败")
+		}
+	});
+}
+
+
+
+//添加模态框
+function addLucky(form_goodsId, form_counts){
+	$.ajax({
+		url: HomeUrl + "luckyManageJsonAdd/",
+		type: 'POST',
+		data:{goodsName:form_goodsId, counts:form_counts},
+		success: function (data) {
+			if (data["status"] == "ok" ) {
+				layer.msg("商品添加成功")
+				thispage = 1
+				loaddata()
 			} else {
-				$(".checkbox-one").prop("checked", false);
+				layer.msg("商品添加失败")
 			}
-		});
-
-		function loaddata() {
-			$.ajax({
-				url: HomeUrl + "luckyManageJsonQuery/?page=" + thispage + "&commName=" + commName + "&timeUp=" + timeBtnUp,
-				success: function(data) {
-					console.log("*******************")
-					console.log(data)
-					luckyCount = data.luckycount
-					luckyListPages = Math.ceil(parseInt(luckyCount) / 10)
-					$(".myListTable").children("tr").remove()
-					//解析数据
-					mainData = data.data;
-					luckyListToPage(mainData)
-					//记录个数'
-					$("#luckyNumber").text(luckyCount);
-					$("#visible-pages-example").children(".sumdiv").remove()
-					var spanele = '<span class="sumdiv">共' + luckyListPages + '页,当前第' + thispage + '页,共' + luckyCount + '条数据</span>'
-					$("#visible-pages-example").append($(spanele))
-					createPageNav('#visible-pages-example', luckyListPages, function(event, page) {
-						thispage = page;
-						loaddata();
-					});
-				},
-				error: function(msg) {
-					console.log("error:获取数据失败")
-					layer.msg("获取数据失败")
-				}
-			});
 		}
-
-		//添加模态框
-		function addLucky(form_goodsId, form_counts) {
-			console.log(form_goodsId, form_counts)
-			$.ajax({
-				url: HomeUrl + "luckyManageJsonAdd/",
-				type: 'POST',
-				data: {
-					goodsName: form_goodsId,
-					counts: form_counts
-				},
-				success: function(data) {
-					console.log(data)
-					if(data["status"] == "ok") {
-						layer.msg("商品添加成功")
-						thispage = 1
-						loaddata()
-					} else {
-						layer.msg("商品添加失败")
-					}
+	});
+}
+var form_goodsId = ""
+var form_counts = ""
+$("#form-addLucky").click( function () {
+	form_goodsId = $("#addLucky-goodsId").val()
+	form_counts = $("#addLucky-counts").val()
+	$.ajax({
+		url: HomeUrl + "goodsNameSelect/",
+		type: 'POST',
+		data:{goodsName:form_goodsId},
+		success: function (data) {
+			if (data["status"] == "ok" && data["data"].length > 0) {
+				if (form_counts < 0) {
+					layer.msg("数量不能为负")
+				} else {
+					$("#exampleModal-confirm").modal();
+					$("#add-goodsname").text("商品名:" + data.data[0].goodsname)
+					$("#add-counts").text("数量:" + form_counts)
+					//addLucky(form_goodsId, form_counts)
 				}
-			});
-		}
-		var form_goodsId = ""
-		var form_counts = ""
-		$("#form-addLucky").click(function() {
-			form_goodsId = $("#addLucky-goodsId").val()
-			form_counts = $("#addLucky-counts").val()
-			$.ajax({
-				url: HomeUrl + "goodsNameSelect/",
-				type: 'POST',
-				data: {
-					goodsName: form_goodsId
-				},
-				success: function(data) {
-					console.log(data)
-					if(data["status"] == "ok" && data["data"].length > 0) {
-						if(form_counts < 0) {
-							layer.msg("数量不能为负")
-						} else {
-							$("#exampleModal-confirm").modal();
-							$("#add-goodsname").text("商品名:" + data.data[0].goodsname)
-							$("#add-counts").text("数量:" + form_counts)
-							//addLucky(form_goodsId, form_counts)
-						}
-					} else {
-						layer.msg("商品不存在")
-					}
-				}
-			});
-		});
-
-		$("#form-confirm").click(function() {
-			addLucky(form_goodsId, form_counts)
-			$("#exampleModal").modal('hide')
-			$("#exampleModal-confirm").modal('hide')
-			$("#addLucky-goodsId").val("")
-			$("#addLucky-counts").val(1)
-		})
-
-		loaddata()
-
-		$("#timeBtn").click(function() {
-			if(timeBtnUp == 0) {
-				$(this).children("span").remove()
-				var ele = '<span class="glyphicon glyphicon-upload" aria-hidden="true">当前时间升序</span>'
-				$(this).append(ele)
-				timeBtnUp = 1
 			} else {
-				$(this).children("span").remove()
-				var ele = '<span class="glyphicon glyphicon-download" aria-hidden="true">当前时间降序</span>'
-				$(this).append(ele)
-				timeBtnUp = 0
+				layer.msg("商品不存在")
 			}
-			thispage = 1
-			loaddata()
-		});
+		}
+	});
+});
 
-		var source = new Array();
+$("#form-confirm").click( function () {
+	addLucky(form_goodsId, form_counts)
+	$("#exampleModal").modal('hide')
+	$("#exampleModal-confirm").modal('hide')
+	$("#addLucky-goodsId").val("")
+	$("#addLucky-counts").val(1)
+})
+
+loaddata()
+
+$("#timeBtn").click( function () {
+	if (timeBtnUp == 0) {
+		$(this).children("span").remove()
+		var ele = '<span class="glyphicon glyphicon-upload" aria-hidden="true">当前时间升序</span>'
+		$(this).append(ele)
+		timeBtnUp = 1
+	} else {
+		$(this).children("span").remove()
+		var ele = '<span class="glyphicon glyphicon-download" aria-hidden="true">当前时间降序</span>'
+		$(this).append(ele)
+		timeBtnUp = 0
+	}
+	thispage = 1
+	loaddata()
+});
+$("#form-updataLucky").click(function(){
+	var updata_counts = $("#updataLucky-counts").val()
+	$.ajax({
+		url: HomeUrl + "luckyManageJsonUpdata/",
+		type: 'POST',
+		data:{counts:updata_counts,luckyid:updata_luckyid},
+		success: function (data) {
+			if (data["status"] == "ok") {
+				$("#exampleModal-updata").modal('hide')
+				loaddata()
+				layer.msg("修改记录成功");
+			} else {
+				layer.msg("修改失败")
+		   }
+		}
+	});
+});
+$('.row').delegate('a', 'click', function(ev)
+	{
+		b = $(this).attr("name");
+		var that = $(this).parents(".item-amount");
+		var a = $(that).parents(".row");
+		var luckyid = $(this).parents("tr").attr("luckyid");
+		var number = $(that.children(".counts")).val();
+		if (b == "-")
+		{
+			if (number > 0)
+			{
+				number -- ;
+				$(that.children(".counts")).val(number);
+			}
+		}
+		else if(b=="+")
+		{
+			if (number >= 0)
+			{
+				number ++ ;
+				$(that.children(".counts")).val(number);
+			}
+		}	
+		number=document.getElementById("numbers");
+
+	});
+
+	var source = new Array();
 
 		$('#addLucky-goodsId').keyup(function(){
-			console.log($(this).val())
 			source.splice(0, source.length);
 			selectName = $(this).val()
 			$.ajax({
@@ -441,11 +472,9 @@
 				type: 'POST',
 				data:{goodsName:selectName},
 				success: function (data) {
-					console.log(data.data)
 					source.splice(0, source.length);
 					$("#itemlist").children().remove()
 					for(var i =0;i<data.data.length;i++){
-						// console.log(data.data[i].goodsname)
 						source.push(data.data[i].goodsname)
 						var ele = '<option>'+data.data[i].goodsname +'</option>'
 						$("#itemlist").append(ele)
@@ -453,12 +482,11 @@
 					}
 				},
 				error: function(msg) {
-					console.log("error:获取数据失败")
 					layer.msg("获取数据失败")
 				}
 			});
 		});
-		
-	</script>
 
-	{% endblock %}
+
+</script>
+{% endblock %}
