--- a/shopServer/templates/userManage.html
+++ b/shopServer/templates/userManage.html
@@ -77,6 +77,12 @@
 	</form>
 	<hr/>
 
+	<form action="http://localhost:8000/shortMsg/" method="post">
+		<input type="text" name="username" placeholder="请输入用户名">
+		<input type="submit" value="提交">
+	
+	</form>
+
 	<table class="table table-bordered">
 		<th colspan="12">
 
@@ -172,7 +178,6 @@
 		})
 
 		function createList(page) {
-			console.log(mainData);
 			$("#userTable").empty()
 			for(i = 0; i < mainData.data.length; i++) {
 				if(i >= (page - 1) * 10 && i <= page * 10 - 1) {
@@ -187,18 +192,19 @@
 					var acountmoney = mydata["acountmoney"];
 					var power = mydata["power"];
 					var activecode = mydata["activecode"];
-					var ele = '<tr class="mytr" NO="' + NO + '" userid = "' + userid + '" username = "' + username + '" pwd = "' + pwd + '" phone = "' + phone + '" wxid = "' + wxid + '" acountmoney = "' + acountmoney + '" headimg="' + headimg + '"  power = "' + power + '" activecode = "' + activecode + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td class="info ele">' + NO + '</td><td class="info ele">' + userid + '</td><td class="info ele">' + username + '</td><td class="info ele">' + pwd + '</td><td class="info ele">' + phone + '</td><td class="info ele">' + wxid + '</td><td class="info ele"><img height="40px" width="40px" src="http://localhost:8000/static/myfile/' + headimg + '" alt=""></td><td class="info ele">' + acountmoney + '</td><td class="info ele">' + power + '</td><td class="info ele">' + activecode + '</td><td class="info ele"><button class="btn btn-default edit btn-primary" data-toggle="modal" data-target="#editModal' + userid + '">编辑</button>     <button class="btn btn-default delete">删除</button></td></tr>'
+					var ele = '<tr class="mytr" NO="' + NO + '" userid = "' + userid + '" username = "' + username + '" pwd = "' + pwd + '" phone = "' + phone + '" wxid = "' + wxid + '" acountmoney = "' + acountmoney + '" headimg="' + headimg + '"  power = "' + power + '" activecode = "' + activecode + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td class="info ele">' + NO + '</td><td class="info ele">' + userid + '</td><td class="info ele">' + username + '</td><td class="info ele">' + pwd + '</td><td class="info ele">' + phone + '</td><td class="info ele">' + wxid + '</td><td class="info ele"><img height="40px" width="40px" src="http://localhost:8000/static/myfile/' + headimg + '" alt=""></td><td class="info ele">' + acountmoney + '</td><td class="info ele">' + power + '</td><td class="info ele">' + activecode + '</td><td class="info ele"><button class="btn btn-default edit btn-primary" data-toggle="modal" data-target="#editModal' + userid + '">编辑111</button>     <button class="btn btn-default delete">删除</button></td></tr>'
 					$(".myModal").empty();
 
 					$("#userTable").append(ele);
+					console.log("98888888888888");
 				}
 
 			}
+
+			addEvent();
 		}
 
-		function dataParse(data) {
-
-			createList(data)
+		function addEvent(){
 			$(".delete").click(function() {
 				var that = $(this).parents('tr');
 				var objData = that.attr('userid')
@@ -211,6 +217,7 @@
 				})
 			})
 			$(".edit").click(function() {
+				console.log("llll");
 
 				var that = $(this).parents("tr");
 				var userid = that.attr('userid');
@@ -223,10 +230,10 @@
 				var acountmoney = that.attr('acountmoney');
 				var power = that.attr('power');
 				var activecode = that.attr('activecode');
-				var ele = '<div class="modal fade bs-example-modal-sm theEditModal" id="editModal' + userid + '" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title">修改会员资料</h4></div><div class="modal-header" id="updetaModal"><form class="editFormContent" action="http://localhost:8000/userManageJsonUpdate/" method="post"><div class="form-group"><label for="recipient-name" class="control-label">序号：</label><input type="text" class="form-control" name="userid" value="' + userid + '" readonly="readonly"></div><div class="form-group"><label for="recipient-name" class="control-label">会员名:</label><input type="text" class="form-control" name="username" value="' + username + '"></div><div class="form-group"><label for="recipient-name" class="control-label">密码:</label><input type="text" class="form-control" name="pwd" value="' + pwd + '"></div><div class="form-group"><label for="recipient-name" class="control-label">电话:</label><input type="text" class="form-control" name="phone" value="' + phone + '"></div><div class="form-group" enctype="multipart/form-data"><label for="recipient-name" class="control-label">头像:</label><img id="preview" /><textbox><input name="goodsid" class="myGoodsid" type="text" value="" hidden><input type="file" name="headimg" id= "images" onchange="imgPreview(this)" accept="image/gif, image/jpeg" value="' + headimg + '"></textbox></div><div class="form-group"><label for="recipient-name" class="control-label">账户余额:</label><input type="text" class="form-control" name="acountmoney" value="' + acountmoney + '"></div><div class="form-group"><label for="recipient-name" class="control-label">等级:</label><input type="text" class="form-control" name="power" value="' + power + '"></div><div class="form-group"><label for="recipient-name" class="control-label">激活码:</label><input type="text" class="form-control" name="activecode" value="' + activecode + '"></div><input type="submit" class="btn btn-primary" value="更新"></form></div></form></div></div></div></div>'
+				var ele = '<div class="modal fade bs-example-modal-sm theEditModal" id="editModal' + userid + '" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title">修改会员资料</h4></div><div class="modal-header" id="updetaModal"><form class="editFormContent" action="http://localhost:8000/userManageJsonUpdate/" method="post"><div class="form-group"><label for="recipient-name" class="control-label">ID：</label><input type="text" class="form-control" name="userid" value="' + userid + '" readonly="readonly"></div><div class="form-group"><label for="recipient-name" class="control-label">会员名:</label><input type="text" class="form-control" name="username" value="' + username + '"></div><div class="form-group"><label for="recipient-name" class="control-label">密码:</label><input type="text" class="form-control" name="pwd" value="' + pwd + '"></div><div class="form-group"><label for="recipient-name" class="control-label">电话:</label><input type="text" class="form-control" name="phone" value="' + phone + '"></div><div class="form-group" enctype="multipart/form-data"><label for="recipient-name" class="control-label">头像:</label><img id="preview" /><textbox><input name="goodsid" class="myGoodsid" type="text" value="" hidden><input type="file" name="headimg" id= "images" onchange="imgPreview(this)" accept="image/gif, image/jpeg" value="' + headimg + '"></textbox></div><div class="form-group"><label for="recipient-name" class="control-label">账户余额:</label><input type="text" class="form-control" name="acountmoney" value="' + acountmoney + '"></div><div class="form-group"><label for="recipient-name" class="control-label">等级:</label><input type="text" class="form-control" name="power" value="' + power + '"></div><div class="form-group"><label for="recipient-name" class="control-label">激活码:</label><input type="text" class="form-control" name="activecode" value="' + activecode + '"></div><input type="submit" class="btn btn-primary" value="更新"></form></div></form></div></div></div></div>'
 				$(".myModal").empty();
 
-				$(".myModal").append(ele)
+				$(".myModal").append(ele)                                                                                                                                                                                                                                                          
 
 				$(".editFormContent").eq(0).on("submit", function(e) {
 					e.preventDefault();
@@ -241,8 +248,15 @@
 					})
 				})
 			})
-			$("#userNumber").text("共有数据" + data.data.length + "条");
+			$("#userNumber").text("共有数据" + mainData.data.length + "条");
 
+		}
+
+		function dataParse(data) {
+			console.log(data);
+			createList(1)
+
+			
 			defaultPageOptioins = {
 				totalPages: data.data.length / 10 + 1,
 				first: "首页",
@@ -253,7 +267,7 @@
 				visiblePages: 5,
 				version: '1.1',
 				onPageClick: function(event, page) {
-					console.log("jklajskldjf");
+					console.log("---------------------" , page);
 					createList(page);
 				}
 			}
@@ -261,8 +275,10 @@
 		}
 		$(".AllDelete").click(function() {
 			console.log("批量删除");
+			var isEmeptySelect = true;
 			$("[name = checkbox-one]:checkbox").each(function() {
 				if($(this).is(":checked")) {
+					isEmeptySelect = false;
 					console.log("xuanzhong");
 					var that = $(this).parents('tr');
 					var objData = that.attr('userid')
@@ -274,6 +290,10 @@
 					})
 				}
 			});
+			if (isEmeptySelect == true) {
+	            console.log("000000");
+	            layer.msg("选择要删除的内容");
+	        }
 
 		});
 
@@ -375,23 +395,6 @@
 			ajaxSubmitForm()
 		});
 
-		$("#headImgBtn").click(function() {
-			console.log('ajaxsubmit');
-			var option = {
-				url: HomeUrl + "uploadHeadImg/",
-				type: 'POST',
-				dataType: 'json',
-				success: function(data) {
-					console.log(data);
-
-				},
-				error: function(data) {
-					console.log("chucuole ");
-				}
-			};
-			$("#headImgForm").ajaxSubmit(option);
-			return false;
-		});
 
 		function ajaxFn(urlString, postdata, fn) {
 			var xmlhttp = new XMLHttpRequest();
